--- a/idex.html
+++ b/idex.html
@@ -9,12 +9,12 @@
     
     <style>
         body{
-            background-image: linear-gradient(to bottom, rgb(0, 0, 0), rgb(0, 0, 0) ,rgb(25 7 49 / 97%));
+            background-image: linear-gradient(to bottom, rgb(9 222 255), rgb(0, 0, 0), rgb(4 1 59 / 97%));
         }
 
         header{
 
-            background-image: linear-gradient(to bottom, rgb(0, 0, 0),rgb(136 140 163));
+            background-image: linear-gradient(to bottom, rgb(0, 0, 0),rgb(0 196 255));
             padding-top: 40px;
             text-align: center;
             min-height: 150px;
@@ -31,16 +31,16 @@
         }
         .paragrafoP{
             font-family: Georgia, 'Times New Roman', Times, serif;
-            color: rgb(0, 0, 0);
+            color: rgb(255, 251, 0);
             padding-top: 10px;
             padding-bottom: 10px;
             font-size: 1.1em;
             margin-right: 17px;
-            text-shadow: 1px 0px 1px rgba(43, 255, 0, 0.26); 
+    
 }
 
         nav{
-            background-color:  rgba(9, 46, 255, 0.61);
+            background-color:  rgb(0 196 255);;
         }
     </style>
 </head>
@@ -122,7 +122,7 @@
 
 
     <footer>
-        <p>Todos os direitos reservados ao Diego Nascimento</p>
+        <p>Todos os direitos reservados ao <a href="https://github.com/DiegoNoxe">Diego Nascimento</a></p>
     </footer>
 </body>
 </html>
