--- a/idex.html
+++ b/idex.html
@@ -9,7 +9,7 @@
     
     <style>
         body{
-            background-image: linear-gradient(to bottom, rgb(9 222 255), rgb(0, 0, 0), rgb(4 1 59 / 97%));
+            background-image: linear-gradient(to left, rgb(98, 0, 255), rgb(0, 0, 0), rgb(4 1 59 / 97%));
         }
 
         header{
@@ -29,6 +29,7 @@
          font-size: 2.5em;
          font-family: serif;
         }
+
         .paragrafoP{
             font-family: Georgia, 'Times New Roman', Times, serif;
             color: rgb(255, 251, 0);
@@ -55,7 +56,7 @@
         <a href="">Home</a>
         <a target="_blank" href="https://www.nasa.gov/">Nasa</a>
         <a target="_blank" href="https://www.youtube.com/@NASA">Youtube</a>
-        <a href="#">Perfil</a>
+        <a href="https://www.facebook.com/profile.php?id=100007219006733">Perfil</a>
     </nav>
 
     <main>
@@ -65,7 +66,7 @@
                 <p>A NASA, Administração Nacional da Aeronáutica e Espaço, surgiu em 1958 em resposta à corrida espacial durante a Guerra Fria, após a União Soviética lançar o primeiro satélite, o Sputnik 1. Criada pelo presidente dos EUA, <a target="_blank" href="https://pt.wikipedia.org/wiki/Dwight_D._Eisenhower">Dwight D. Eisenhower</a>, a NASA tinha o objetivo de liderar a exploração espacial civil e militar. Suas primeiras missões, como o Projeto Mercury e o Projeto Gemini, prepararam o terreno para o grande feito da humanidade: a chegada à Lua em 1969, com a missão Apollo 11. Desde então, a NASA tem liderado a exploração espacial, realizando missões para estudar o sistema solar, conduzir pesquisas científicas no espaço e expandir a presença humana no cosmos.</p>
 
                 <h1 class="sh">Fundador</h1>
-                <p>Dwight D. Eisenhower, além de ser presidente, era um militar e político americano experiente. Antes de assumir a presidência, ele serviu como general de cinco estrelas durante a Segunda Guerra Mundial, comandando as forças aliadas na Europa. Sua liderança durante a guerra e sua experiência militar influenciaram sua abordagem para questões de segurança nacional e tecnologia durante sua presidência.</p>
+                <p>Dwight D. Eisenhower, além de ser presidente, era um militar e político americano experiente. Antes de assumir a presidência, ele serviu como general de <a target="_blank" href="https://www.auditorioibirapuera.com.br/o-que-e-um-general-5-estrelas/">cinco estrelas</a> durante a Segunda Guerra Mundial, comandando as forças aliadas na Europa. Sua liderança durante a guerra e sua experiência militar influenciaram sua abordagem para questões de segurança nacional e tecnologia durante sua presidência.</p>
                 <div>
                     
                 <picture>
