--- a/idex.html
+++ b/idex.html
@@ -30,6 +30,8 @@
          font-family: serif;
         }
 
+        
+
         .paragrafoP{
             font-family: Georgia, 'Times New Roman', Times, serif;
             color: rgb(255, 251, 0);
@@ -37,7 +39,16 @@
             padding-bottom: 10px;
             font-size: 1.1em;
             margin-right: 17px;
-    
+
+  
+}
+
+@media only screen and (max-width: 500px) {
+    header .paragrafoP{
+        margin-left: 30px;
+        padding-bottom: 30px;
+        color: rgb(255, 251, 0);
+    }
 }
 
         nav{
